# slides

./: bun.lockb  database.db  package.json
database-plugin/: .gitignore  Cargo.toml  README.md  package.json
database-plugin/.changes/: config.json  initial-release.md  readme.md
database-plugin/src/: lib.rs
database-plugin/src/api/: book.rs  config.rs  language.rs  mod.rs  song.rs
database-plugin/src/controller/: book.rs  config.rs  language.rs  song.rs
database-plugin/webview-dist/: index.d.ts  index.js  types.d.ts
database-plugin/webview-src/: index.ts  types.ts
scripts/: parse_songs.py  write_to_database.py
src/: App.tsx  main.tsx  utility.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/main/: Backstage.tsx  BackstageSettings.tsx  BookList.tsx  ItemTabList.tsx
src/settings/: general.tsx  settings.tsx
