[package]
name = "database-plugin"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.5.4" }
serde = "1.0"
thiserror = "1.0"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls"] }
